--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header id="header">
             <div class="inner" style="text-align: justify;">
                 <a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-                <h1 style="text-align: justify;"><strong>Hi, I am Hamed Vaseghnia</strong>, Ph.D. candidate in Computational Engineering at the University of Stavanger.<br /> 
+                <h1 style="text-align: justify;"><strong>Hi, I am Hamed Vaseghnia, Ph.D. candidate in Computational Engineering at the University of Stavanger.</strong><br /> 
                 </h1>
             </div>
         </header>
