--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h2>Mechanical engineer and <br />
                     Computational Fluid Dynamics (CFD) researcher.</h2>
                 </header>
-                <p>I am passionate about the fascinating world of fluid mechanics, with a keen interest in the modeling and simulation of complex fluid dynamics systems. </p>My expertise primarily lies in multiphase and non-Newtonian fluid flows, areas that present unique challenges and opportunities for discovery.
+                <p>I am passionate about the fascinating world of fluid mechanics, with a keen interest in the modeling and simulation of complex fluid dynamics systems. </p>My expertise primarily lies in multiphase flow, heat transfer, and non-Newtonian fluid flows, areas that present unique challenges and opportunities for discovery.
 
                 My research focuses on utilizing advanced numerical and mathematical techniques to explore the intricate dynamics of physcial phenomena in fluid flows.</p> I aim to apply my knowledge in computational fluid mechanics to benefit various industries. Whether it's improving industrial processes, improving health conditions, or advancing technological innovations.</p>
             </section>
@@ -117,6 +117,110 @@
                     </li>
                 </ul>
             </section>
+			
+			
+<!-- Publications -->
+<section id="publications">
+    <header class="major">
+        <h2>List of Publications</h2>
+    </header>
+    <ul class="features">
+        <li>
+            <h3><a href="https://pubs.aip.org" class="publication-link">Effects of hematocrit and non-Newtonian blood rheology on pulsatile wall shear stress distributions in vascular anomalies: A multiple relaxation time lattice Boltzmann approach</a></h3>
+            <p><strong>Authors:</strong> Hamed Vaseghnia, Espen Jettestuen, Knut Erik Teigen Giljarhus, Jan Ludvig Vinningland,  Aksel Hiorth .</p>
+            <p><strong>Year:</strong> 2024</p>
+            <p><strong>Journal:</strong> Physics of Fluids</p>
+        </li>
+        <li>
+            <h3><a href="https://journals.aps.org/pre/abstract/10.1103/PhysRevE.110.015305" class="publication-link">Evaluation of the non-Newtonian lattice Boltzmann model coupled with off-grid bounce-back
+scheme:Wall shear stress distributions in Ostwald–de Waele fluids flow</a></h3>
+            <p><strong>Authors:</strong> Hamed Vaseghnia, Espen Jettestuen, Knut Erik Teigen Giljarhus, Olav Aursjø,  Aksel Hiorth.</p>
+            <p><strong>Year:</strong> 2024</p>
+            <p><strong>Journal:</strong> Physical Review E</p>
+        </li>
+        <li>
+            <h3><a href="https://www.sciencedirect.com/science/article/pii/S0011227524000997" class="publication-link">Numerical study on collapsing cavitation bubble dynamics in cryogenic fluids</a></h3>
+            <p><strong>Authors:</strong> Eslam Ezzatneshan, Ashkan Salehi and Hamed Vaseghnia.</p>
+            <p><strong>Year:</strong> 2024</p>
+            <p><strong>Journal:</strong> Cryogenics</p>
+        </li>
+        <li>
+            <h3><a href="https://www.sciencedirect.com/science/article/pii/S1290072922004410" class="publication-link">Study of micro-heater shape and wettability effects on inception of boiling phenomenon using a multiphase lattice Boltzmann method</a></h3>
+            <p><strong>Authors:</strong> Eslam Ezzatneshan, Ashkan Salehi and Hamed Vaseghnia.</p>
+            <p><strong>Year:</strong> 2023</p>
+            <p><strong>Journal:</strong> International Journal of Thermal Sciences</p>
+        </li>
+        <li>
+            <h3><a href="https://pubs.aip.org/aip/pof/article-abstract/33/12/123311/1062126/Dynamics-of-an-acoustically-driven-cavitation?redirectedFrom=fulltext" class="publication-link">Dynamics of an acoustically driven cavitation bubble cluster in the vicinity of a solid surface</a></h3>
+            <p><strong>Authors:</strong> Eslam Ezzatneshan and Hamed Vaseghnia.</p>
+            <p><strong>Year:</strong> 2021</p>
+            <p><strong>Journal:</strong> Physics of Fluids</p>
+        </li>
+		        <li>
+            <h3><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/htj.22245" class="publication-link">Study on forcing schemes in the thermal lattice Boltzmann method for simulation of natural convection flow problems</a></h3>
+            <p><strong>Authors:</strong> Eslam Ezzatneshan, Ashkan Salehi and Hamed Vaseghnia.</p>
+            <p><strong>Year:</strong> 2021</p>
+            <p><strong>Journal:</strong> Heat transfer</p>
+        </li>
+				        <li>
+            <h3><a href="https://journals.aps.org/pre/abstract/10.1103/PhysRevE.102.053309" class="publication-link">Simulation of collapsing cavitation bubbles in various liquids by lattice Boltzmann model coupled with the Redlich-Kwong-Soave equation of state</a></h3>
+            <p><strong>Authors:</strong> Eslam Ezzatneshan and Hamed Vaseghnia.</p>
+            <p><strong>Year:</strong> 2020</p>
+            <p><strong>Journal:</strong> Physical Review E</p>
+        </li>
+						        <li>
+            <h3><a href="https://www.sciencedirect.com/science/article/pii/S0378437119318229" class="publication-link">Evaluation of equations of state in multiphase lattice Boltzmann method with considering surface wettability effects</a></h3>
+            <p><strong>Authors:</strong> Eslam Ezzatneshan and Hamed Vaseghnia.</p>
+            <p><strong>Year:</strong> 2020</p>
+            <p><strong>Journal:</strong> Physica A: Statistical Mechanics and its Applications</p>
+        </li>
+    </ul>
+</section>
+
+<style>
+    #publications {
+        padding: 2rem;
+        background-color: #f9f9f9;
+    }
+    .major h2 {
+        font-size: 2.5rem;
+        color: #333;
+        text-align: left;
+        margin-bottom: 1rem;
+    }
+    .features {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    .features li {
+        list-style: none;
+        flex: 1 1 45%;
+        background-color: #fff;
+        margin: 1rem;
+        padding: 1rem;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .features h3 {
+        font-size: 1.5rem;
+        color: #007BFF;
+    }
+    .features p {
+        font-size: 1rem;
+        color: #555;
+    }
+    .publication-link {
+        text-decoration: none;
+        color: #007BFF;
+    }
+    .publication-link:hover {
+        text-decoration: underline;
+    }
+</style>
+
+
+
 
             <!-- Four -->
             <section id="four">
