--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header id="header">
             <div class="inner" style="text-align: justify;">
                 <a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-                <h1 style="text-align: justify;"><strong>Hi, I am Hamed Vaseghnia, Ph.D. candidate in Computational Engineering at the University of Stavanger.</strong><br /> 
+                <h1 style="text-align: justify;"><strong>Welcome! I am Hamed Vaseghnia, Ph.D. candidate in Computational Engineering at the University of Stavanger.</strong><br /> 
                 </h1>
             </div>
         </header>
@@ -28,13 +28,26 @@
             <!-- One -->
             <section id="one">
                 <header class="major">
-                    <h2>Mechanical engineer and <br />
+                    <h2>Mechanical Engineer and <br />
                     Computational Fluid Dynamics (CFD) researcher.</h2>
                 </header>
                 <p>I am passionate about the fascinating world of fluid mechanics, with a keen interest in the modeling and simulation of complex fluid dynamics systems. </p>My expertise primarily lies in multiphase flow, heat transfer, and non-Newtonian fluid flows, areas that present unique challenges and opportunities for discovery.
 
                 My research focuses on utilizing advanced numerical and mathematical techniques to explore the intricate dynamics of physcial phenomena in fluid flows.</p> I aim to apply my knowledge in computational fluid mechanics to benefit various industries. Whether it's improving industrial processes, improving health conditions, or advancing technological innovations.</p>
             </section>
+
+            <section id="news-updates">
+                <h2>News and Updates</h2>
+                <ul>
+                    <li><strong>May 2024:</strong> Attended the Nordic Rheology Conference in Stavanger, where I presented our latest research on the effects of hematocrit and non-Newtonian blood rheology in vascular anomalies.</li>
+                    <li><strong>March 2024:</strong> Attended LBM spring school in Heidelberg-Germany hosted by Karlsruhe institute of technology .</li>
+					<li><strong>September 2023:</strong> Attended the International Conference on Computational Heat and Mass Transfer ICCHMT 2023 in Dusseldorf, where I presented our work titled "Evaluation of WSS Distributions in Pulsatile Non-Newtonian Fluid Flows using the MRT-LB Model". The paper is accepted to publish in the book series "Lecture Notes in Mechanical Engineering" of Springer Nature.</li>
+                    <li><strong>June 2023:</strong> I attended and succesfully completed the PhD course of "Rheology of Complex Fluids" held in Danish Technical University(DTU) at the department of Chemical engineering.</li>
+                </ul>
+            </section>
+
+
+
 
             <!-- Two -->
             <section id="two">
