--- a/index.html
+++ b/index.html
@@ -282,6 +282,9 @@ scheme:Wall shear stress distributions in Ostwald–de Waele fluids flow</a></h3
 								<li><a href="https://github.com/hamedvaseghnia" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/hamed-vaseghnia/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:hamed.vaseghnia@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.researchgate.net/profile/Hamed-Vaseghnia" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
+                                <li><a href="https://scholar.google.com/citations?user=silJrwQAAAAJ&hl=en&oi=ao" class="icon brands fa-google-scholar"><span class="label">Google Scholar</span></a></li>
+
 					</ul>
 
 				</div>
