--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <section id="news-updates">
                 <h2>News and Updates</h2>
                 <ul>
-                    <li><strong>May 2024:</strong> Attended the Nordic Rheology Conference in Stavanger, where I presented our latest research on the effects of hematocrit and non-Newtonian blood rheology in vascular anomalies.</li>
+				    <li><strong>July 2024:</strong> Our latest work titled "Effects of hematocrit and non-Newtonian blood rheology on pulsatile wall shear stress distributions in vascular anomalies: a multiple relaxation time lattice Boltzmann approach" has been accpeted for publication in the journal of Physics of Fluids.</li>
+                    <li><strong>June 2024:</strong> Our latest work titled "Evaluation of non-Newtoninan lattice Boltzmann model coupled with off-grid bounce back scheme: Wall shear stress distributions in Ostwald–de Waele fluids flow" has been accpeted for publication in the journal of Physcial Reveiew E.</li>
+					<li><strong>May 2024:</strong> Attended the Nordic Rheology Conference in Stavanger, where I presented our latest research on the effects of hematocrit and non-Newtonian blood rheology in vascular anomalies.</li>
                     <li><strong>March 2024:</strong> Attended LBM spring school in Heidelberg-Germany hosted by Karlsruhe institute of technology .</li>
 					<li><strong>September 2023:</strong> Attended the International Conference on Computational Heat and Mass Transfer ICCHMT 2023 in Dusseldorf, where I presented our work titled "Evaluation of WSS Distributions in Pulsatile Non-Newtonian Fluid Flows using the MRT-LB Model". The paper is accepted to publish in the book series "Lecture Notes in Mechanical Engineering" of Springer Nature.</li>
                     <li><strong>June 2023:</strong> I attended and succesfully completed the PhD course of "Rheology of Complex Fluids" held in Danish Technical University(DTU) at the department of Chemical engineering.</li>
