--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a href="images/fulls/Vortex.png" class="image fit thumb"><img src="images/thumbs/Vortex.png" alt="" /></a>
                         <h3>CFD analysis of flow dynamics and patterns affected by hematocrit in intracranial aneurysm</h3>
                         <ul class="actions">
-                            <li><a href="https://pubs.aip.org/aip/pof" class="button">Learn More</a></li>
+                            <li><a href="https://doi.org/10.1063/5.0217436" class="button">Learn More</a></li>
                         </ul>
                     </article>
                     <article class="col-6 col-12-xsmall work-item">
