--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </header>
     <ul class="features">
         <li>
-            <h3><a href="https://pubs.aip.org" class="publication-link">Effects of hematocrit and non-Newtonian blood rheology on pulsatile wall shear stress distributions in vascular anomalies: A multiple relaxation time lattice Boltzmann approach</a></h3>
+            <h3><a href="https://doi.org/10.1063/5.0217436" class="publication-link">Effects of hematocrit and non-Newtonian blood rheology on pulsatile wall shear stress distributions in vascular anomalies: A multiple relaxation time lattice Boltzmann approach</a></h3>
             <p><strong>Authors:</strong> Hamed Vaseghnia, Espen Jettestuen, Knut Erik Teigen Giljarhus, Jan Ludvig Vinningland,  Aksel Hiorth .</p>
             <p><strong>Year:</strong> 2024</p>
             <p><strong>Journal:</strong> Physics of Fluids</p>
