--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <section id="news-updates">
                 <h2>News and Updates</h2>
                 <ul>
+				    <li><strong>Sep-Dec 2024:</strong> I will be visiting the Department of Computational Physiology at Simula Research Laboratory in Oslo for three months. During this time, I will collaborate with experts to investigate the non-Newtonian effects of biofluids on turbulence behavior, a project that explores the interesting dynamics of viscoelastic fluids in biological systems.</li>
 				    <li><strong>July 2024:</strong> Our latest work titled "Effects of hematocrit and non-Newtonian blood rheology on pulsatile wall shear stress distributions in vascular anomalies: a multiple relaxation time lattice Boltzmann approach" has been accpeted for publication in the journal of Physics of Fluids.</li>
                     <li><strong>June 2024:</strong> Our latest work titled "Evaluation of non-Newtoninan lattice Boltzmann model coupled with off-grid bounce back scheme: Wall shear stress distributions in Ostwald–de Waele fluids flow" has been accpeted for publication in the journal of Physcial Reveiew E.</li>
 					<li><strong>May 2024:</strong> Attended the Nordic Rheology Conference in Stavanger, where I presented our latest research on the effects of hematocrit and non-Newtonian blood rheology in vascular anomalies.</li>
